add get, post, delete, put and patch for rest api and grpc

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.application.name=boiler-plates
 grpc.server.port=9090
+spring.jackson.property-naming-strategy=SNAKE_CASE
+spring.jackson.default-property-inclusion=non_null
