--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,12 @@
 		<start-class>t.it.boilerplates.BoilerPlatesApplication</start-class>
 	</properties>
 	<dependencies>
+<!--		for long type-->
+		<dependency>
+			<groupId>com.graphql-java</groupId>
+			<artifactId>graphql-java-extended-scalars</artifactId>
+			<version>21.0</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
