--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.application.name=boiler-plates
 grpc.server.port=9090
 spring.jackson.default-property-inclusion=non_null
 spring.graphql.graphiql.enabled=true
+spring.jackson.property-naming-strategy=SNAKE_CASE
