--- a/rest-server/src/main/resources/application.properties
+++ b/rest-server/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.application.name=rest-server
+spring.jackson.default-property-inclusion=non_null
+spring.jackson.property-naming-strategy=SNAKE_CASE
