--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <modules>
         <module>simple-spring-app</module>
         <module>rest-server</module>
+        <module>rest-client</module>
     </modules>
 
     <groupId>t.it</groupId>
@@ -91,10 +92,10 @@
                     <artifactId>protobuf-maven-plugin</artifactId>
                     <version>${protobuf-plugin.version}</version>
                     <configuration>
-                        <protocArtifact>com.google.protobuf:protoc:${protobuf.version}:exe:${os.detected.classifier}
+                        <protocArtifact>com.google.protobuf:protoc:${protobuf.version}:exe:osx-x86_64
                         </protocArtifact>
                         <pluginId>grpc-java</pluginId>
-                        <pluginArtifact>io.grpc:protoc-gen-grpc-java:${grpc.version}:exe:${os.detected.classifier}
+                        <pluginArtifact>io.grpc:protoc-gen-grpc-java:${grpc.version}:exe:osx-x86_64
                         </pluginArtifact>
                     </configuration>
                     <executions>
