--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,8 @@
         <grpc.version>1.62.2</grpc.version>
         <spring-boot.version>3.2.2</spring-boot.version>
         <maven-compiler.version>3.13.0</maven-compiler.version>
+        <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
+        <okhttp3.version>4.12.0</okhttp3.version>
     </properties>
 
     <dependencyManagement>
@@ -59,7 +61,7 @@
             <dependency>
                 <groupId>javax.annotation</groupId>
                 <artifactId>javax.annotation-api</artifactId>
-                <version>1.3.2</version>
+                <version>${javax.annotation-api.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
@@ -67,6 +69,18 @@
                 <version>${spring-boot.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.squareup.okhttp3</groupId>
+                <artifactId>mockwebserver</artifactId>
+                <version>${okhttp3.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.squareup.okhttp3</groupId>
+                <artifactId>okhttp</artifactId>
+                <version>${okhttp3.version}</version>
+                <scope>test</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
