--- a/simple-spring-client/src/main/resources/application.properties
+++ b/simple-spring-client/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.application.name=simple-spring-client
 spring.jackson.default-property-inclusion=non_null
 spring.jackson.property-naming-strategy=SNAKE_CASE
+grpc.client.ping.address=localhost:9090
+grpc.client.ping.negotiation-type=plaintext
