--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,11 @@
                 <artifactId>grpc-server-spring-boot-starter</artifactId>
                 <version>${grpc-spring-boot-starter.version}</version>
             </dependency>
+            <dependency>
+                <groupId>net.devh</groupId>
+                <artifactId>grpc-client-spring-boot-starter</artifactId>
+                <version>${grpc-spring-boot-starter.version}</version>
+            </dependency>
 
             <dependency>
                 <groupId>io.grpc</groupId>
