--- a/simple-spring-client/src/main/resources/application.properties
+++ b/simple-spring-client/src/main/resources/application.properties
@@ -2,4 +2,5 @@ spring.application.name=simple-spring-client
 spring.jackson.default-property-inclusion=non_null
 spring.jackson.property-naming-strategy=SNAKE_CASE
 grpc.client.ping.address=localhost:9090
+spring.profiles.active=local
 grpc.client.ping.negotiation-type=plaintext
