migrated simple-spring-app response to standard response

--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,11 @@
                 <version>${okhttp3.version}</version>
                 <scope>test</scope>
             </dependency>
+            <dependency>
+                <groupId>com.google.protobuf</groupId>
+                <artifactId>protobuf-java-util</artifactId>
+                <version>${protobuf.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
