--- a/simple-spring-logging/src/main/resources/application.properties
+++ b/simple-spring-logging/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=simple-spring-logging
+logging.level.root=info
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss.SSS} | ${spring.application.name} | %logger | %M | %X{traceId} | %msg%n
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss.SSS} | ${spring.application.name} | %logger | %M | %X{traceId} | %msg%n
+logging.file.name=simple-spring-logging/${spring.application.name}.log
+logging.logback.rollingpolicy.max-history=10
+logging.logback.rollingpolicy.max-file-size=100MB
+logging.logback.rollingpolicy.total-size-cap=1GB
+logging.logback.rollingpolicy.file-name-pattern=simple-spring-logging/${spring.application.name}-%d{yyyy-MM-dd}.%i.log
