add unit test examples fro simple-spring-logging

--- a/simple-spring-logging/src/main/resources/application.properties
+++ b/simple-spring-logging/src/main/resources/application.properties
@@ -3,6 +3,7 @@ logging.level.root=info
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss.SSS} | ${spring.application.name} | %logger | %M | %X{traceId} | %msg%n
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss.SSS} | ${spring.application.name} | %logger | %M | %X{traceId} | %msg%n
 logging.file.name=simple-spring-logging/${spring.application.name}.log
+# each file should be at most 100MB, keep 10 days worth of history, but at most 1GB
 logging.logback.rollingpolicy.max-history=10
 logging.logback.rollingpolicy.max-file-size=100MB
 logging.logback.rollingpolicy.total-size-cap=1GB
