--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
         <module>simple-spring-app</module>
         <module>simple-spring-client</module>
         <module>simple-spring-rest-server</module>
+        <module>simple-spring-logging</module>
     </modules>
 
     <groupId>t.it</groupId>
