--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,8 @@
         <maven-compiler.version>3.13.0</maven-compiler.version>
         <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
         <okhttp3.version>4.12.0</okhttp3.version>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
     </properties>
 
     <dependencyManagement>
