--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <okhttp3.version>4.12.0</okhttp3.version>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
+        <spring-cloud.version>2023.0.1</spring-cloud.version>
     </properties>
 
     <dependencyManagement>
