migrate local config to consul config

--- a/simple-spring-config/src/main/resources/application-prod.yaml
+++ b/simple-spring-config/src/main/resources/application-prod.yaml
@@ -11,7 +11,7 @@ spring:
   datasource:
     username: ${application.dbUsername}
     password: ${application.dbPassword}
-    url: ${application.dbHost}
+    url: jdbc:db://${application.dbHost}:3306/examples
   application:
     name: ${application.appName}
 server:
