--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
         <module>simple-spring-rest-server</module>
         <module>simple-spring-logging</module>
         <module>simple-spring-config</module>
+        <module>simple-spring-monitoring</module>
     </modules>
 
     <groupId>t.it</groupId>
@@ -27,13 +28,34 @@
         <spring-boot.version>3.2.2</spring-boot.version>
         <maven-compiler.version>3.13.0</maven-compiler.version>
         <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
+        <open-telemetry>1.38.0</open-telemetry>
+        <otel-depedencies>1.1.4</otel-depedencies>
         <okhttp3.version>4.12.0</okhttp3.version>
         <maven.compiler.source>17</maven.compiler.source>
-        <spring-cloud.version>2023.0.1</spring-cloud.version>
+        <spring-cloud.version>2021.0.9</spring-cloud.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-sleuth-otel-dependencies</artifactId>
+                <version>${otel-depedencies}</version>
+                <scope>import</scope>
+                <type>pom</type>
+            </dependency>
+            <dependency>
+                <groupId>io.opentelemetry</groupId>
+                <artifactId>opentelemetry-exporter-otlp</artifactId>
+                <version>${open-telemetry}</version>
+            </dependency>
             <!--		for long type-->
             <dependency>
                 <groupId>com.graphql-java</groupId>
