--- a/simple-spring-monitoring/src/main/resources/application.properties
+++ b/simple-spring-monitoring/src/main/resources/application.properties
@@ -7,4 +7,7 @@ logging.file.name=simple-spring-logging/${spring.application.name}.log
 logging.logback.rollingpolicy.max-history=10
 logging.logback.rollingpolicy.max-file-size=100MB
 logging.logback.rollingpolicy.total-size-cap=1GB
-logging.logback.rollingpolicy.file-name-pattern=simple-spring-logging/${spring.application.name}-%d{yyyy-MM-dd}.%i.log
+logging.logback.rollingpolicy.file-name-pattern=simple-spring-monitoring/${spring.application.name}-%d{yyyy-MM-dd}.%i.log
+spring.sleuth.otel.config.trace-id-ratio-based=1.0
+spring.sleuth.otel.exporter.otlp.endpoint=http://localhost:4318
+management.endpoints.web.exposure.include=prometheus
