integrate otel to local zipkin, loki, tempo, and grafana

--- a/pom.xml
+++ b/pom.xml
@@ -28,33 +28,28 @@
         <spring-boot.version>3.2.2</spring-boot.version>
         <maven-compiler.version>3.13.0</maven-compiler.version>
         <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
-        <open-telemetry>1.38.0</open-telemetry>
-        <otel-depedencies>1.1.4</otel-depedencies>
-        <okhttp3.version>4.12.0</okhttp3.version>
+        <okhttp3.version>5.0.0-alpha.14</okhttp3.version>
         <maven.compiler.source>17</maven.compiler.source>
-        <spring-cloud.version>2021.0.9</spring-cloud.version>
+        <opentelemetry-bom.version>1.38.0</opentelemetry-bom.version>
+        <opentelemetry-instrumentation-bom.verion>2.4.0-alpha</opentelemetry-instrumentation-bom.verion>
+        <gaalvm.version>0.10.2</gaalvm.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-dependencies</artifactId>
-                <version>${spring-cloud.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-sleuth-otel-dependencies</artifactId>
-                <version>${otel-depedencies}</version>
-                <scope>import</scope>
-                <type>pom</type>
-            </dependency>
-            <dependency>
                 <groupId>io.opentelemetry</groupId>
-                <artifactId>opentelemetry-exporter-otlp</artifactId>
-                <version>${open-telemetry}</version>
+                <artifactId>opentelemetry-bom</artifactId>
+                <version>${opentelemetry-bom.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>io.opentelemetry.instrumentation</groupId>
+                <artifactId>opentelemetry-instrumentation-bom-alpha</artifactId>
+                <version>${opentelemetry-instrumentation-bom.verion}</version>
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
             <!--		for long type-->
             <dependency>
@@ -111,7 +106,6 @@
                 <groupId>com.squareup.okhttp3</groupId>
                 <artifactId>okhttp</artifactId>
                 <version>${okhttp3.version}</version>
-                <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>com.google.protobuf</groupId>
@@ -124,6 +118,11 @@
     <build>
         <pluginManagement>
             <plugins>
+                <plugin>
+                    <groupId>org.graalvm.buildtools</groupId>
+                    <artifactId>native-maven-plugin</artifactId>
+                    <version>${gaalvm.version}</version>
+                </plugin>
                 <plugin>
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-maven-plugin</artifactId>
