--- a/simple-spring-monitoring/Dockerfile
+++ b/simple-spring-monitoring/Dockerfile
@@ -1,7 +1,7 @@
-FROM openjdk:17-oracle
-
-COPY target/simple-spring-monitoring-0.0.1-SNAPSHOT.jar simple-spring-monitoring-0.0.1-SNAPSHOT.jar
+FROM openjdk:17-jdk-oracle
+ARG APP_DIR=app
+WORKDIR /$APP_DIR
+COPY target/simple-spring-monitoring-0.0.1-SNAPSHOT.jar simple-spring-monitoring.jar
 
 EXPOSE 8080
-
-ENTRYPOINT ["java","-jar","/spring-cloud-open-telemetry.jar"]
+ENTRYPOINT ["java","-jar","simple-spring-monitoring.jar"]
