--- a/.gitignore
+++ b/.gitignore
@@ -31,5 +31,6 @@ build/
 
 ### VS Code ###
 .vscode/
+simple-spring-monitoring/Dockerfile
 simple-spring-logging/simple-spring-logging
 simple-spring-logging/simple-spring-logging.log
