--- a/simple-spring-client/pom.xml
+++ b/simple-spring-client/pom.xml
@@ -90,6 +90,10 @@
         </extensions>
         <plugins>
             <plugin>
+                <groupId>org.graalvm.buildtools</groupId>
+                <artifactId>native-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
