--- a/simple-spring-monitoring/src/main/resources/application.yml
+++ b/simple-spring-monitoring/src/main/resources/application.yml
@@ -12,11 +12,5 @@ otel:
         capture-marker-attribute: true
         capture-logger-context-attributes: true
         capture-mdc-attributes: '*'
-management:
-  endpoints:
-    web:
-      exposure:
-        include: '*'
-    jmx:
-      exposure:
-        include: '*'
+    micrometer: # to get jvm matrices
+      enabled: true
