--- a/simple-spring-monitoring/docker/grafana/grafana-datasources.yml
+++ b/simple-spring-monitoring/docker/grafana/grafana-datasources.yml
@@ -3,7 +3,7 @@ apiVersion: 1
 datasources:
   - name: Prometheus
     type: prometheus
-    uid: prometheus
+    uid: simple-prometheus
     access: proxy
     orgId: 1
     url: http://simple-prometheus:9090
@@ -18,7 +18,7 @@ datasources:
           name: trace_id
   - name: Loki
     type: loki
-    uid: loki
+    uid: simple-loki
     access: proxy
     orgId: 1
     url: http://simple-loki:3100
@@ -36,7 +36,7 @@ datasources:
     version: 1
     editable: false
     apiVersion: 1
-    uid: tempo
+    uid: simple-tempo
     jsonData:
       httpMethod: GET
       serviceMap:
