--- a/simple-spring-monitoring/docker-compose-prod.yml
+++ b/simple-spring-monitoring/docker-compose-prod.yml
@@ -6,3 +6,7 @@ services:
       context: ./
       dockerfile: Dockerfile
     image: "simple-spring-monitoring:latest"
+    environment:
+      PROFILE_MODE: "prod"
+    ports:
+      - "8082:8080"
