--- a/simple-spring-database/pom.xml
+++ b/simple-spring-database/pom.xml
@@ -3,12 +3,10 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.3.0</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<groupId>t.it</groupId>
+		<artifactId>boiler-plates</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<groupId>t.it</groupId>
 	<artifactId>simple-spring-database</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>simple-spring-database</name>
@@ -35,6 +33,11 @@
 			<groupId>io.projectreactor</groupId>
 			<artifactId>reactor-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<scope>annotationProcessor</scope>
 		</dependency>
 	</dependencies>
 
