--- a/pom.xml
+++ b/pom.xml
@@ -35,10 +35,16 @@
         <opentelemetry-instrumentation-bom.verion>2.4.0-alpha</opentelemetry-instrumentation-bom.verion>
         <graalvm.version>0.10.2</graalvm.version>
         <spring-cloud.version>2023.0.1</spring-cloud.version>
+        <r2dbc-mysql.version>1.1.0</r2dbc-mysql.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>io.asyncer</groupId>
+                <artifactId>r2dbc-mysql</artifactId>
+                <version>${r2dbc-mysql.version}</version>
+            </dependency>
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
