--- a/simple-spring-database/src/main/resources/application.properties
+++ b/simple-spring-database/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=simple-spring-database
+spring.r2dbc.url=r2dbc:mysql://localhost:3306/simple_database
+spring.r2dbc.username=root
+spring.r2dbc.password=
+spring.r2dbc.pool.enabled=true
