add readme for simple-spring-config

--- a/simple-spring-config/src/main/resources/application-local.yaml
+++ b/simple-spring-config/src/main/resources/application-local.yaml
@@ -6,6 +6,7 @@ spring:
   datasource:
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
+    # dummy driver
     url: jdbc:db://${DB_HOST}/examples
   application:
     name: ${APP_NAME}
