--- a/simple-spring-config/src/main/resources/application-prod.yaml
+++ b/simple-spring-config/src/main/resources/application-prod.yaml
@@ -15,6 +15,7 @@ spring:
   datasource:
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
+    # dummy driverl
     url: jdbc:db://${DB_HOST}/examples
   application:
     name: ${APP_NAME}
