add readme for simple-spring-rest-server

--- a/simple-spring-database/src/main/resources/application.properties
+++ b/simple-spring-database/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.r2dbc.url=r2dbc:mysql://localhost:3306/simple_database
 spring.r2dbc.username=root
 spring.r2dbc.password=
 spring.r2dbc.pool.enabled=true
+spring.jackson.default-property-inclusion=non_null
+spring.jackson.property-naming-strategy=SNAKE_CASE
