--- a/simple-spring-monitoring/docker-compose-local.yml
+++ b/simple-spring-monitoring/docker-compose-local.yml
@@ -1,11 +1,5 @@
 services:
   simple-spring-monitoring:
-    container_name: simple-spring-monitoring
-    restart: always
-    build:
-      context: ./
-      dockerfile: Dockerfile
-    image: "simple-spring-monitoring:latest"
     environment:
       PROFILE_MODE: local
     ports:
@@ -20,7 +14,7 @@ services:
     command:
       - "--config=/etc/otel-collector.yml"
     volumes:
-      - "./docker/collector/otel-collector.yml:/etc/otel-collector.yml"
+      - "./localopentelemetry/collector/otel-collector.yml:/etc/otel-collector.yml"
     ports:
       - "4317:4317"
       - "8888:8888" # now it's accessible from prometheus
@@ -35,7 +29,7 @@ services:
     image: grafana/tempo:latest
     command: [ "-config.file=/etc/tempo.yml" ]
     volumes:
-      - ./docker/tempo/tempo.yml:/etc/tempo.yml
+      - ./localopentelemetry/tempo/tempo.yml:/etc/tempo.yml
     restart: always
     ports:
       - "4317"  # otlp grpc
@@ -45,7 +39,7 @@ services:
     container_name: simple-grafana
     image: grafana/grafana:latest
     volumes:
-      - ./docker/grafana/grafana-datasources.yml:/etc/grafana/provisioning/datasources/datasources.yml
+      - ./localopentelemetry/grafana/grafana-datasources.yml:/etc/grafana/provisioning/datasources/datasources.yml
     restart: always
     ports:
       - "3001:3000"
@@ -75,7 +69,7 @@ services:
     container_name: simple-prometheus
     image: prom/prometheus:latest
     volumes:
-      - ./docker/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+      - ./localopentelemetry/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
     command:
       - --config.file=/etc/prometheus/prometheus.yml
       - --enable-feature=exemplar-storage
